--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,25 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListAccountActivity"></activity>
+
+
+        <receiver android:name="com.test.alejandrocordonurena.technicaltestandroid.widget.WidgetProvider" >
+            <intent-filter >
+                <action
+                    android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/widgetinfo" />
+        </receiver>
+
+
+
+        <service
+            android:name="com.test.alejandrocordonurena.technicaltestandroid.widget.WidgetService"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+
     </application>
 
 </manifest>
